--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash.update": "^4.10.2",
     "merge": "^1.2.1",
     "moment": "^2.22.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "^2.1.4",
     "react-typing-animation": "^1.4.0",
     "regenerator-runtime": "^0.12.1",
     "semantic-ui-css": "^2.3.3",
