--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.4.1",
     "lodash.update": "^4.10.2",
     "merge": "^1.2.1",
     "moment": "^2.22.2",
