--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
+    "braces": "^2.3.1",
+    "eslint": "^4.18.2",
+    "handlebars": "^4.1.0",
     "jquery": "^3.4.1",
+    "js-yaml": "^3.13.1",
     "lodash.update": "^4.10.2",
+    "mem": "^4.0.0",
     "merge": "^1.2.1",
     "moment": "^2.22.2",
     "react": "^16.5.0",
